--- a/examples/DVCLive-Quickstart.ipynb
+++ b/examples/DVCLive-Quickstart.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install dvclive -q"
+    "!pip install dvclive"
    ]
   },
   {
@@ -44,15 +44,18 @@
    "outputs": [],
    "source": [
     "!git init -q\n",
+    "!git config --local user.email \"you@example.com\"\n",
+    "!git config --local user.name \"Your Name\"\n",
     "!dvc init -q\n",
     "!git commit -m \"DVC init\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example code"
+    "## Helper code"
    ]
   },
   {
@@ -61,7 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -194,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running"
+    "## Running experiments with DVCLive"
    ]
   },
   {
@@ -206,7 +208,7 @@
     "# You can modify these parameters to see how they affect the training\n",
     "# And run the cell several times\n",
     "params = {\n",
-    "    \"epochs\": 10,\n",
+    "    \"epochs\": 5,\n",
     "    \"lr\": 0.003,\n",
     "    \"weight_decay\": 0\n",
     "}\n",
@@ -262,6 +264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,9 +298,10 @@
     "import pandas as pd\n",
     "from plotly.express import parallel_coordinates\n",
     "\n",
-    "df = pd.read_csv(\"results.csv\")\n",
+    "columns = [\"epochs\", \"lr\", \"weight_decay\", \"test.acc\"]\n",
+    "df = pd.read_csv(\"results.csv\", usecols=columns).dropna()\n",
     "\n",
-    "fig = parallel_coordinates(df, [\"epochs\", \"lr\", \"weight_decay\", \"test.acc\"], color=\"test.acc\")\n",
+    "fig = parallel_coordinates(df, columns, color=\"test.acc\")\n",
     "fig.show()"
    ]
   },
@@ -319,13 +323,6 @@
     "from IPython.display import HTML\n",
     "HTML(filename='./dvc_plots/index.html')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
