Hide helper code by default

--- a/examples/DVCLive-Quickstart.ipynb
+++ b/examples/DVCLive-Quickstart.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Helper code"
+    "## Setup code"
    ]
   },
   {
@@ -64,6 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@title Training helpers. { display-mode: \"form\" }\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -172,6 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@title Initialize model and dataset. { display-mode: \"form\" }\n",
+    "\n",
     "model = torch.nn.Sequential(\n",
     "    torch.nn.Flatten(),\n",
     "    torch.nn.Linear(28 * 28, 128),\n",
