--- a/examples/DVCLive-PyTorch-Lightning.ipynb
+++ b/examples/DVCLive-PyTorch-Lightning.ipynb
@@ -171,7 +171,7 @@
         "id": "ttiwwreH_B2i"
       },
       "source": [
-        "# Tacking experiments with DVCLive"
+        "# Tracking experiments with DVCLive"
       ]
     },
     {
