--- a/examples/DVCLive-Quickstart.ipynb
+++ b/examples/DVCLive-Quickstart.ipynb
@@ -240,7 +240,7 @@
     "        live.log_sklearn_plot(\n",
     "            \"confusion_matrix\", \n",
     "            acual_train, predicted_train, \n",
-    "            name=\"test/confusion_matrix\"\n",
+    "            name=\"train/confusion_matrix\"\n",
     "        )\n",
     "\n",
     "        # Test Evaluation\n",
