Add DVCLive-YOLO notebook.
Update other examples for consistency

--- a/examples/DVCLive-PyTorch-Lightning.ipynb
+++ b/examples/DVCLive-PyTorch-Lightning.ipynb
@@ -24,7 +24,7 @@
         "id": "m0XW9Ml7_B2e"
       },
       "source": [
-        "## Install dvclive"
+        "## Setup"
       ]
     },
     {
@@ -41,15 +41,6 @@
       "outputs": [],
       "source": [
         "!pip install \"dvclive[lightning]\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jTpx8lTZ_B2g"
-      },
-      "source": [
-        "## Initialize DVC Repository"
       ]
     },
     {
@@ -74,19 +65,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BIknRMTp_B2g"
-      },
-      "source": [
-        "# Setup code"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zC9hk7kibFTX"
       },
       "source": [
-        "## Define LightningModule"
+        "### Define LightningModule"
       ]
     },
     {
@@ -144,7 +126,7 @@
         "id": "St0ElX9obqRS"
       },
       "source": [
-        "## Set up dataset and loaders"
+        "### Dataset and loaders"
       ]
     },
     {
@@ -526,7 +508,7 @@
         "id": "7zEi0BXp_B2i"
       },
       "source": [
-        "## Comparing"
+        "## Comparing results"
       ]
     },
     {
@@ -552,6 +534,17 @@
         "df.dropna(inplace=True)\n",
         "df.reset_index(drop=True, inplace=True)\n",
         "df\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from plotly.express import parallel_coordinates\n",
+        "fig = parallel_coordinates(df, columns, color=\"metrics.mAP50-95(B)\")\n",
+        "fig.show()"
       ]
     },
     {
@@ -585,15 +578,6 @@
         "from IPython.display import HTML\n",
         "HTML(filename='./dvc_plots/index.html')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eqVOPYzwwxn9"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
