--- a/examples/DVCLive-YOLO.ipynb
+++ b/examples/DVCLive-YOLO.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If `dvclive` is installed, Ultralytics YOLO v8 will automatically use DVCLive for traking experiments."
+    "If `dvclive` is installed, Ultralytics YOLO v8 will automatically use DVCLive for tracking experiments."
    ]
   },
   {
