live: Set new defaults `report=None` and `save_dvc_exp=True`.

--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -106,7 +106,7 @@
     "        train_dataset=small_train_dataset,\n",
     "        eval_dataset=small_eval_dataset,\n",
     "        compute_metrics=compute_metrics,\n",
-    "        callbacks=[DVCLiveCallback(report=\"notebook\", save_dvc_exp=True, log_model=True)],\n",
+    "        callbacks=[DVCLiveCallback(report=\"notebook\", \n",
     "    )\n",
     "    trainer.train()"
    ]
