--- a/examples/DVCLive-PyTorch-Lightning.ipynb
+++ b/examples/DVCLive-PyTorch-Lightning.ipynb
@@ -173,7 +173,7 @@
         "        limit_train_batches=200,\n",
         "        limit_val_batches=100,\n",
         "        max_epochs=5,\n",
-        "        logger=DVCLiveLogger(save_dvc_exp=True, report=\"notebook\", log_model=True),\n",
+        "        logger=DVCLiveLogger(, log_model=True),\n",
         "    )\n",
         "    trainer.fit(model, train_loader, validation_loader)\n"
       ]
