--- a/examples/DVCLive-scikit-learn.ipynb
+++ b/examples/DVCLive-scikit-learn.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "for n_estimators in (10, 50, 100):\n",
     "\n",
-    "  with Live(report=None, save_dvc_exp=True) as live:\n",
+    "  with Live() as live:\n",
     "\n",
     "    live.log_param(\"n_estimators\", n_estimators)\n",
     "\n",
