--- a/examples/DVCLive-Quickstart.ipynb
+++ b/examples/DVCLive-Quickstart.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "best_test_acc = 0\n",
     "\n",
-    "with Live() as live:\n",
+    "with Live(report=\"notebook\") as live:\n",
     "\n",
     "    live.log_params(params)\n",
     "\n",
