--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -1,11 +1,38 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to do Experiment tracking with DVCLive\n",
+    "\n",
+    "What you will learn ?\n",
+    "* Fine-tuning a model on a text classification task\n",
+    "* Track Machine Learning experiments with DVCLive\n",
+    "* Visualize results and create report "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Git & Install Dependencies \n",
+    "\n",
+    "Install accelerate , Datasets , evaluate , transformers and dvclive\n",
+    "Start a Git repo . Your experiments will be saved in a commit but hidden in\n",
+    "order to not clutter your repo. \n",
+    "Initialize DVC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install dvc pandas\n",
     "!pip install accelerate datasets dvclive evaluate 'transformers[torch]' --upgrade"
    ]
   },
@@ -23,10 +50,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset"
+    "### Fine-tuning a model on a text classification task\n",
+    "#### Loading the dataset\n",
+    "We will use [imdb](https://huggingface.co/datasets/imdb) Large Movie Review Dataset. This is a dataset for binary\n",
+    "sentiment classification containing a set of 25K movie reviews for traning, and\n",
+    "25K for testing."
    ]
   },
   {
@@ -38,15 +70,42 @@
     "from datasets import load_dataset\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "dataset = load_dataset(\"imdb\")\n",
-    "\n",
+    "dataset = load_dataset(\"imdb\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preprocessing the data\n",
+    "We use Transformers Tokenizer which tokenize the inputs and put them in a format\n",
+    "the model expects. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-cased\")\n",
     "\n",
     "def tokenize_function(examples):\n",
     "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
     "\n",
     "small_train_dataset = dataset[\"train\"].shuffle(seed=42).select(range(2000)).map(tokenize_function, batched=True)\n",
-    "small_eval_dataset = dataset[\"test\"].shuffle(seed=42).select(range(200)).map(tokenize_function, batched=True)\n"
+    "small_eval_dataset = dataset[\"test\"].shuffle(seed=42).select(range(200)).map(tokenize_function, batched=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define evaluation metrics\n",
+    "f1 is a metric for combining precision recall metrics in one unique value , so\n",
+    "we take this criteria for evaluating the models."
    ]
   },
   {
@@ -67,10 +126,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tracking experiments with DVCLive"
+    "### Training and Tracking experiments with DVCLive\n",
+    "Track experiments in DVC by changing a few lines of your Python code.\n",
+    "Enable experiment tracking using ´save_dvc_exp=True´ and ´log_model=True´\n"
    ]
   },
   {
@@ -112,10 +174,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparing"
+    "### Comparing Experiments\n",
+    "We create a dataset with the experiments in order to visualize it."
    ]
   },
   {
