--- a/examples/DVCLive_HuggingFace.ipynb
+++ b/examples/DVCLive_HuggingFace.ipynb
@@ -25,7 +25,7 @@
         "* Install accelerate , Datasets , evaluate , transformers and dvclive\n",
         "* Start a Git repo . Your experiments will be saved in a commit but hidden in\n",
         "order to not clutter your repo.\n",
-        "Initialize DVC"
+        "* Initialize DVC"
       ]
     },
     {
@@ -2006,6 +2006,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -2023,10 +2026,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": []
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
