--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -37,8 +37,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install dvc pandas\n",
-        "!pip install accelerate datasets dvclive evaluate 'transformers[torch]' --upgrade"
+        "!pip install accelerate datasets dvclive evaluate pandas 'transformers[torch]' --upgrade"
       ]
     },
     {
