--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -242,7 +242,7 @@
       "source": [
         "### Comparing Experiments\n",
         "\n",
-        "We create a dataset with the experiments in order to visualize it.\n"
+        "We create a dataframe with the experiments in order to visualize it.\n"
       ]
     },
     {
