codespell: disable for .ipynb files

--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -66,7 +66,7 @@
     "#### Loading the dataset\n",
     "\n",
     "We will use the [imdb](https://huggingface.co/datasets/imdb) Large Movie Review Dataset. This is a dataset for binary\n",
-    "sentiment classification containing a set of 25K movie reviews for traning and\n",
+    "sentiment classification containing a set of 25K movie reviews for training and\n",
     "25K for testing.\n"
    ]
   },
