--- a/examples/DVCLive_HuggingFace.ipynb
+++ b/examples/DVCLive_HuggingFace.ipynb
@@ -218,6 +218,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from dvclive import Live\n",
         "from transformers.integrations import DVCLiveCallback\n",
         "\n",
         "lr = 1e-4\n",
@@ -240,7 +241,7 @@
         "    train_dataset=small_train_dataset,\n",
         "    eval_dataset=small_eval_dataset,\n",
         "    compute_metrics=compute_metrics,\n",
-        "    callbacks=[DVCLiveCallback(log_model=True, report=\"notebook\")],\n",
+        "    callbacks=[DVCLiveCallback(live=Live(report=\"notebook\"), log_model=True)],\n",
         ")\n",
         "trainer.train()"
       ],
