update fabric notebook

--- a/examples/DVCLive-Fabric.ipynb
+++ b/examples/DVCLive-Fabric.ipynb
@@ -239,6 +239,10 @@
         "        test_loss = fabric.all_gather(test_loss).sum() / len(test_loader.dataset)\n",
         "\n",
         "        print(f\"\\nTest set: Average loss: {test_loss:.4f}, Accuracy: ({100 * test_acc.compute():.0f}%)\\n\")\n",
+        "\n",
+        "        # log additional metrics\n",
+        "        logger.log_metrics({\"test_loss\": test_loss, \"test_acc\": 100 * test_acc.compute()})\n",
+        "\n",
         "        test_acc.reset()\n",
         "\n",
         "        if hparams.dry_run:\n",
@@ -280,7 +284,7 @@
       },
       "outputs": [],
       "source": [
-        "hparams = SimpleNamespace(batch_size=64, epochs=2, lr=1.0, gamma=0.7, dry_run=False, seed=1, log_interval=10, save_model=True)\n",
+        "hparams = SimpleNamespace(batch_size=64, epochs=5, lr=1.0, gamma=0.7, dry_run=False, seed=1, log_interval=10, save_model=True)\n",
         "run(hparams)"
       ]
     },
