--- a/examples/DVCLive-PyTorch-Lightning.ipynb
+++ b/examples/DVCLive-PyTorch-Lightning.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install \"dvclive[lightning]\""
+    "%pip install \"dvclive[lightning]\""
    ]
   },
   {
@@ -75,7 +75,7 @@
     "\n",
     "\n",
     "class LitAutoEncoder(pl.LightningModule):\n",
-    "    def __init__(self, encoder_size=64, lr=1e-3):\n",
+    "    def __init__(self, encoder_size=64, lr=1e-3):  # noqa: ARG002\n",
     "        super().__init__()\n",
     "        self.save_hyperparameters()\n",
     "        self.encoder = torch.nn.Sequential(\n",
@@ -89,7 +89,7 @@
     "            torch.nn.Linear(encoder_size, 28 * 28),\n",
     "        )\n",
     "\n",
-    "    def training_step(self, batch, batch_idx):\n",
+    "    def training_step(self, batch, batch_idx):  # noqa: ARG002\n",
     "        x, y = batch\n",
     "        x = x.view(x.size(0), -1)\n",
     "        z = self.encoder(x)\n",
@@ -98,7 +98,7 @@
     "        self.log(\"train_mse\", train_mse)\n",
     "        return train_mse\n",
     "\n",
-    "    def validation_step(self, batch, batch_idx):\n",
+    "    def validation_step(self, batch, batch_idx):  # noqa: ARG002\n",
     "        x, y = batch\n",
     "        x = x.view(x.size(0), -1)\n",
     "        z = self.encoder(x)\n",
@@ -108,8 +108,7 @@
     "        return val_mse\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        optimizer = torch.optim.Adam(self.parameters(), lr=self.hparams.lr)\n",
-    "        return optimizer"
+    "        return torch.optim.Adam(self.parameters(), lr=self.hparams.lr)"
    ]
   },
   {
