--- a/examples/DVCLive-Quickstart.ipynb
+++ b/examples/DVCLive-Quickstart.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install dvclive"
+    "%pip install dvclive"
    ]
   },
   {
@@ -97,8 +97,7 @@
     "    \"\"\"Get model prediction scores.\"\"\"\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        y_pred = model(x)\n",
-    "    return y_pred\n",
+    "        return model(x)\n",
     "\n",
     "\n",
     "def get_metrics(y, y_pred, y_pred_label):\n",
@@ -156,14 +155,14 @@
     "                out_matrix[xs:xe, ys:ye, c] = (1 - image) * label_color[c]\n",
     "                out_matrix[ys:ye, xs:xe, c] = (1 - image) * label_color[c]\n",
     "\n",
-    "    for i, j in confusion:\n",
+    "    for i, j in confusion:  # noqa: PLC0206\n",
     "        image = confusion[(i, j)]\n",
-    "        assert image.shape == image_shape\n",
+    "        assert image.shape == image_shape  # noqa: S101\n",
     "        xs = (i + 1) * frame_size + 1\n",
     "        xe = (i + 2) * frame_size - 1\n",
     "        ys = (j + 1) * frame_size + 1\n",
     "        ye = (j + 2) * frame_size - 1\n",
-    "        assert (xe - xs, ye - ys) == image_shape\n",
+    "        assert (xe - xs, ye - ys) == image_shape  # noqa: S101\n",
     "        if i != j:\n",
     "            for c in range(3):\n",
     "                out_matrix[xs:xe, ys:ye, c] = (1 - image) * incorrect_color[c]\n",
