--- a/examples/DVCLive-Fabric.ipynb
+++ b/examples/DVCLive-Fabric.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install \"dvclive[lightning]\""
+    "%pip install \"dvclive[lightning]\""
    ]
   },
   {
@@ -82,9 +82,9 @@
     "\n",
     "import torch\n",
     "from torch import nn\n",
-    "import torch.nn.functional as F\n",
+    "import torch.nn.functional as F  # noqa: N812\n",
     "from torch import optim\n",
-    "import torchvision.transforms as T\n",
+    "import torchvision.transforms as T  # noqa: N812\n",
     "from lightning.fabric import Fabric, seed_everything\n",
     "from lightning.fabric.utilities.rank_zero import rank_zero_only\n",
     "from torch.optim.lr_scheduler import StepLR\n",
@@ -149,8 +149,9 @@
     "    # Log dict of hyperparameters\n",
     "    logger.log_hyperparams(hparams.__dict__)\n",
     "\n",
-    "    # Create the Lightning Fabric object. The parameters like accelerator, strategy, devices etc. will be proided\n",
-    "    # by the command line. See all options: `lightning run model --help`\n",
+    "    # Create the Lightning Fabric object. The parameters like accelerator, strategy,\n",
+    "    # devices etc. will be proided by the command line. See all options: `lightning\n",
+    "    # run model --help`\n",
     "    fabric = Fabric()\n",
     "\n",
     "    seed_everything(hparams.seed)  # instead of torch.manual_seed(...)\n",
@@ -182,14 +183,15 @@
     "        test_dataset, batch_size=hparams.batch_size\n",
     "    )\n",
     "\n",
-    "    # don't forget to call `setup_dataloaders` to prepare for dataloaders for distributed training.\n",
+    "    # don't forget to call `setup_dataloaders` to prepare for dataloaders for\n",
+    "    # distributed training.\n",
     "    train_loader, test_loader = fabric.setup_dataloaders(train_loader, test_loader)\n",
     "\n",
     "    model = Net()  # remove call to .to(device)\n",
     "    optimizer = optim.Adadelta(model.parameters(), lr=hparams.lr)\n",
     "\n",
-    "    # don't forget to call `setup` to prepare for model / optimizer for distributed training.\n",
-    "    # the model is moved automatically to the right device.\n",
+    "    # don't forget to call `setup` to prepare for model / optimizer for\n",
+    "    # distributed training. The model is moved automatically to the right device.\n",
     "    model, optimizer = fabric.setup(model, optimizer)\n",
     "\n",
     "    scheduler = StepLR(optimizer, step_size=1, gamma=hparams.gamma)\n",
@@ -210,8 +212,10 @@
     "\n",
     "            optimizer.step()\n",
     "            if (batch_idx == 0) or ((batch_idx + 1) % hparams.log_interval == 0):\n",
-    "                print(\n",
-    "                    f\"Train Epoch: {epoch} [{batch_idx * len(data)}/{len(train_loader.dataset)} ({100.0 * batch_idx / len(train_loader):.0f}%)]\\tLoss: {loss.item():.6f}\"\n",
+    "                done = (batch_idx * len(data)) / len(train_loader.dataset)\n",
+    "                pct = 100.0 * batch_idx / len(train_loader)\n",
+    "                print(  # noqa: T201\n",
+    "                    f\"-> Epoch: {epoch} [{done} ({pct:.0f}%)]\\tLoss: {loss.item():.6f}\"\n",
     "                )\n",
     "\n",
     "                # Log dict of metrics\n",
@@ -232,8 +236,8 @@
     "                test_loss += F.nll_loss(output, target, reduction=\"sum\").item()\n",
     "\n",
     "                # WITHOUT TorchMetrics\n",
-    "                # pred = output.argmax(dim=1, keepdim=True)  # get the index of the max log-probability\n",
-    "                # correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "                # pred = output.argmax(dim=1, keepdim=True)  # get the index of the max\n",
+    "                # log-probability correct += pred.eq(target.view_as(pred)).sum().item()\n",
     "\n",
     "                # WITH TorchMetrics\n",
     "                test_acc(output, target)\n",
@@ -243,9 +247,10 @@
     "\n",
     "        # all_gather is used to aggregated the value across processes\n",
     "        test_loss = fabric.all_gather(test_loss).sum() / len(test_loader.dataset)\n",
+    "        acc = 100 * test_acc.compute()\n",
     "\n",
-    "        print(\n",
-    "            f\"\\nTest set: Average loss: {test_loss:.4f}, Accuracy: ({100 * test_acc.compute():.0f}%)\\n\"\n",
+    "        print(  # noqa: T201\n",
+    "            f\"\\nTest set: Average loss: {test_loss:.4f}, Accuracy: ({acc:.0f}%)\\n\"\n",
     "        )\n",
     "\n",
     "        # log additional metrics\n",
@@ -263,8 +268,9 @@
     "    if hparams.save_model:\n",
     "        fabric.save(\"mnist_cnn.pt\", model.state_dict())\n",
     "\n",
-    "        # `logger.experiment` provides access to the `dvclive.Live` instance where you can use additional logging methods.\n",
-    "        # Check that `rank_zero_only.rank == 0` to avoid logging in other processes.\n",
+    "        # `logger.experiment` provides access to the `dvclive.Live` instance where you\n",
+    "        # can use additional logging methods. Check that `rank_zero_only.rank == 0` to\n",
+    "        # avoid logging in other processes.\n",
     "        if rank_zero_only.rank == 0:\n",
     "            logger.experiment.log_artifact(\"mnist_cnn.pt\")\n",
     "\n",
@@ -322,11 +328,13 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
