hf: fix deprecated arguments in transformers.TrainingArguments

--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -200,7 +200,7 @@
     "lr = 3e-4\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "    evaluation_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
     "    learning_rate=lr,\n",
     "    logging_strategy=\"epoch\",\n",
     "    num_train_epochs=5,\n",
@@ -243,7 +243,7 @@
     "lr = 1e-4\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "    evaluation_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
     "    learning_rate=lr,\n",
     "    logging_strategy=\"epoch\",\n",
     "    num_train_epochs=5,\n",
